--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <title>Age Calculator</title>
   </head>
   <body>
-    <main></main>
+    <main>
+      <form id="form">
+        <label for="day">Day</label>
+        <input type="number" id="day" min="0" max="31" />
+        <label for="month">Month</label>
+        <input type="number" id="month" min="1" max="12" />
+        <label for="year">Year</label>
+        <input type="number" id="year" min="1900" max="" />
+        <input type="submit" value="Submit" id="submit-button" />
+      </form>
+      <ul>
+        <li><span id="years">--</span> years</li>
+        <li><span id="months">--</span> months</li>
+        <li><sapn id="days">--</sapn> days</li>
+      </ul>
+    </main>
     <script src="script.js"></script>
   </body>
 </html>
